# codex-slop

./: .gitignore  Cargo.toml  README.md
apps/ptroute/: Cargo.toml
apps/ptroute/src/: main.rs
apps/ptroute/src/invade/: draw.rs  mod.rs  model.rs
crates/ptroute-graph/: Cargo.toml
crates/ptroute-graph/src/: build.rs  layout.rs  lib.rs
crates/ptroute-graph/tests/: graph_tests.rs
crates/ptroute-model/: Cargo.toml
crates/ptroute-model/src/: lib.rs
crates/ptroute-render/: Cargo.toml
crates/ptroute-render/src/: bvh.rs  camera.rs  geometry.rs  image_out.rs  integrator.rs  lib.rs  material.rs  math.rs
crates/ptroute-render/tests/: bvh_tests.rs  smoke_render.rs
crates/ptroute-trace/: Cargo.toml
crates/ptroute-trace/src/: lib.rs  parser.rs  runner.rs  stream.rs
crates/ptroute-trace/tests/: concurrency_tests.rs  parse_tests.rs
crates/ptroute-trace/tests/fixtures/: traceroute_ipv6_1.txt  traceroute_linux_1.txt  traceroute_macos_1.txt  traceroute_macos_continuation_1.txt  traceroute_multi_ip_1.txt
docs/: formats.md  rendering.md  spec.md
watch-hash/: .gitignore  Cargo.toml  README.md
watch-hash/src/: main.rs
