[package]
name = "ptroute"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.0", features = ["derive"] }
ptroute-graph = { path = "../../crates/ptroute-graph" }
ptroute-model = { path = "../../crates/ptroute-model" }
ptroute-render = { path = "../../crates/ptroute-render" }
ptroute-trace = { path = "../../crates/ptroute-trace" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
